# online_store

./: LICENSE
product_catalouge/: .env  .gitignore  README.md  pyproject.toml
product_catalouge/product_catalouge/: database.py  schemas.py  types.py
product_catalouge/product_catalouge/core/: config.py
product_catalouge/product_catalouge/exceptions/: database_exceptions.py  http_exceptions.py
product_catalouge/product_catalouge/lib/: db_initializer.py  models_loader.py  utils.py
product_catalouge/product_catalouge/models/: __init__.py  attribute.py  category.py  media.py  product.py  product_type.py  variant.py
product_catalouge/product_catalouge/repository/: __init__.py  attribute_repository.py  base_repository.py  category_repository.py  exceptions.py  media_repository.py  models.py  product_repository.py  product_type_repository.py  unit_of_work.py  variant_repository.py
product_catalouge/product_catalouge/schemas/: __init__.py  attribute.py  category.py  main.py  media.py  product.py  product_type.py  variant.py
product_catalouge/product_catalouge/service/: __init__.py  attributes_service.py  base_service.py  categories_service.py  domain.py  media_service.py  product.py  product_service.py  product_type_service.py  unit_of_work.py  variant_service.py
product_catalouge/tests/: conftest.py
product_catalouge/tests/test_attributes/: conftest.py  test_attributes.py  test_attributes_endpoints.py
product_catalouge/tests/test_categories/: conftest.py  test_categories_endpoints.py
product_catalouge/tests/test_media/: conftest.py  test_media_endpoints.py
(+17 files in other folders)
